--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,26 @@
     <title>MicroBlog</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag    'application', "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body style="background-color: lightgray">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Micro-blog</a>
+        <ul class="navbar-nav mr-auto">
+          <li><%=link_to 'Posts', posts_path%></li>
+        </ul>
+        <ul class="navbar-nav navbar-right">
+          <li><%=link_to 'Create Post', new_post_path%></li>
+        </ul>
+    </nav>
+    <div class="row justify-content-md-center">
+      <div class="col col-md-8">
+        <%= yield %>
+      <div>
+    </div>
   </body>
 </html>
