--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,8 @@
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Message</th>
-    <th></th>
-  </tr>
- 
-  <% @posts.each do |post| %>
-    <tr>
-      <td><%= post.title %></td>
-      <td><%= post.text %></td>
-      <td><%= link_to 'Show', post_path(post) %></td>
-    </tr>
-  <% end %>
-</table>
+<% @posts.each do |post| %>
+   <div class="card border-dark m-3 p-4">
+        <h3><%= post.title %></h3>
+        <p>Posted at: <%= I18n.l(post.created_at, format: :short) %></p>
+        <p><%= post.text %></p>
+        <%= link_to 'Read more', post_path(post) %>
+    </div>
+<% end %>
