--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,10 @@
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
- 
-<p>
-  <strong>Text:</strong>
-  <%= @post.text %>
-</p>
+<div class="card border-dark m-3 p-4">
+    <h3>
+        <%= @post.title %>
+    </h3>
+    <p>Posted at: <%= I18n.l(@post.created_at, format: :long) %></p>
+
+    <p>
+        <%= @post.text %>
+    </p>
+</div>
