--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,8 @@
    <div class="card border-dark m-3 p-4">
         <h3><%= post.title %></h3>
         <p>Posted at: <%= I18n.l(post.created_at, format: :short) %></p>
-        <p><%= post.text %></p>
+        <p class="text-truncate"><%= post.text %></p>
         <%= link_to 'Read more', post_path(post) %>
+        <%= link_to 'Edit post', edit_post_path(post) %>
     </div>
 <% end %>
