--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,9 +2,13 @@
     <h3>
         <%= @post.title %>
     </h3>
-    <p>Posted at: <%= I18n.l(@post.created_at, format: :long) %></p>
-
-    <p>
-        <%= @post.text %>
-    </p>
+    <div class="row">
+        <div class="col col-md-8">
+            <p>Posted at: <%= I18n.l(@post.created_at, format: :long) %></p>
+        </div>
+        <div class="col col-md-4 text-right">
+            <%= link_to 'Edit post', edit_post_path(@post) %>
+        </div>
+    </div>
+        <p><%= @post.text %></p>
 </div>
