--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,16 @@
 <div class="card border-dark m-3 p-4">
     <h3><%= @post.title %></h3>
-    <div class="row">
+    <p>Posted at: <%= I18n.l(@post.created_at, format: :long) %></p>
+    <p><%= @post.text %></p>
+    <div class="row justify-content-between">
         <div class="col col-md-8">
-            <p>Posted at: <%= I18n.l(@post.created_at, format: :long) %></p>
+            <%= link_to 'Delete post', post_path(@post), method: :delete, data: {confirm: 'Do you want to delete this post?'}, :class =>'btn btn-danger'%>
         </div>
-        <div class="col col-md-4 text-right">
-            <%= link_to 'Edit post', edit_post_path(@post) %>
+        <div class="col col-md-2">
+            <%= link_to 'Edit post', edit_post_path(@post), :class =>'btn btn-secondary'%>
+        </div>
+        <div class="col col-md-2">
+            <%= link_to 'Go back', posts_path, :class =>'btn btn-info'%>
         </div>
     </div>
-    <p><%= @post.text %></p>
 </div>
