--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,7 @@
   <body style="background-color: lightgray">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="/">Micro-blog</a>
-        <ul class="navbar-nav mr-auto">
-          <li><%=link_to 'Posts', posts_path%></li>
-        </ul>
-        <ul class="navbar-nav navbar-right">
-          <li><%=link_to 'Create Post', new_post_path%></li>
-        </ul>
+      <%=link_to 'New Post', new_post_path, :class => 'text-light'%>
     </nav>
     <div class="row justify-content-md-center">
       <div class="col col-md-8">
