--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <% @posts.each do |post| %>
    <div class="card border-dark m-3 p-4">
         <h3><%= post.title %></h3>
-        <p>Posted at: <%= I18n.l(post.created_at, format: :short) %></p>
+        <p><%= post_status(post) %></p>
         <p class="text-truncate"><%= post.text %></p>
         <%= link_to 'Read more...', post_path(post) %>
     </div>
