add erros partial

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,10 +1,6 @@
 <%= form_with(model: @post, local: true) do |form| %>
   <div class="card border-dark m-3 p-4">
-    <% if @post.errors.any? %>
-        <% @post.errors.full_messages.each do |msg| %>
-          <div class="alert alert-danger"><%= msg %></div>
-        <% end %>
-    <% end %>
+    <%= render 'errors'%>
     <div class="form-group">
       <h4>
         <%= form.label :title %><br>
