--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="row justify-content-md-center">
       <div class="col col-md-8">
         <%= yield %>
-      <div>
+      </div>
     </div>
   </body>
 </html>
