--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(model: @post, local: true) do |form| %>
+<%= form_with(model: @post) do |form| %>
   <div class="card border-dark m-3 p-4">
-    <%= render 'errors'%>
+    <div id="errors"></div>
     <div class="form-group">
       <h4>
         <%= form.label :title %><br>
