--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,3 @@
-<% @posts.each do |post| %>
-   <div class="card border-dark m-3 p-4">
-        <h3><%= post.title %></h3>
-        <p><%= post_status(post) %></p>
-        <p class="text-truncate"><%= post.text %></p>
-        <div class="row justify-content-between">
-            <div class="col col-md-2">
-                <%= link_to 'Read more...', post_path(post) %>
-            </div>
-            <div class="col col-md-2">
-                <%= link_to 'Delete post', 
-                post_path(post), 
-                method: :delete, 
-                remote:true, 
-                data: {confirm: 'Do you want to delete this post?'}, 
-                :class =>'btn btn-danger'%>
-            </div>
-        </div>
-    </div>
-<% end %>
+<%=render 'form'%>
+<div id="posts">
+    <%= render @posts%>
