update readme and remove error message when post is created

--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,4 +1,5 @@
 $('form').on('ajax:success', function() {
+    $('.alert.alert-danger').remove();
     $('form').each(function() {
         this.reset();
     })
